--- a/src/app/admin/customers/customers.component.html
+++ b/src/app/admin/customers/customers.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-4">
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h3>Customer Management</h3>
-    <button class="btn btn-primary" (click)="openAddModal()">Add Customer</button>
+    <!-- <button class="btn btn-primary" (click)="openAddModal()">Add Customer</button> -->
   </div>
 
   <div class="mb-3">
@@ -97,10 +97,6 @@
               <div class="col-md-6 mb-3">
                 <label>Date of Birth</label>
                 <input type="date" class="form-control" [(ngModel)]="selectedCustomer.dob" name="dob" />
-              </div>
-              <div class="col-md-6 mb-3">
-                <label>PAN Number</label>
-                <input type="text" class="form-control" [(ngModel)]="selectedCustomer.panNo" name="panNo" />
               </div>
               <div class="col-md-6 mb-3">
                 <label>Address</label>
