--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -38,9 +38,9 @@
         </span>
       </div>
 
-      <div class="forgot">
+      <!-- <div class="forgot">
         <a (click)="openForgotPassword()">Forgot MPIN?</a>
-      </div>
+      </div> -->
 
       <button type="submit" class="btn" [disabled]="invalidEmail">Login</button>
 
