--- a/src/app/user/user-settings/user-settings.component.html
+++ b/src/app/user/user-settings/user-settings.component.html
@@ -8,16 +8,16 @@
       [class.active]="activeTab === 'personal'"
       (click)="activeTab = 'personal'"
     >
-      Personal Info
+      <!-- Personal Info -->
     </div>
-    <div
+    <!-- <div
       class="tab-item"
       [class.active]="activeTab === 'security'"
       (click)="activeTab = 'security'"
     >
       Passwords & Security
     </div>
-  </div>
+  </div> -->
 
   <!-- Tab Content -->
   <div class="tab-content">
